[FLINK-36171][table] Remove apis about ManagedTable